force-app/main/default/objects/MUSW__Auth_Provider__mdt/MUSW__Auth_Provider__mdt.object-meta.xml
<CustomObject>
    <label>Auth Provider</label>
    <pluralLabel>Auth Providers</pluralLabel>
</CustomObject>