force-app/main/default/objects/MUSW__Auth_Provider__mdt/fields/MUSW__Access_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Access_Token_Url__c</fullName>
    <label>Access Token Url</label>
    <type>Url</type>
</CustomField>