force-app/main/default/objects/MUSW__Auth_Provider__mdt/fields/MUSW__Key__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Key__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>