force-app/main/default/objects/MUSW__Auth_Provider__mdt/fields/MUSW__Redirect_Url__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Redirect_Url__c</fullName>
    <label>Redirect Url</label>
    <type>Url</type>
</CustomField>