force-app/main/default/objects/MUSW__Auth_Provider__mdt/fields/MUSW__Rest_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Rest_Setting_Name__c</fullName>
    <label>Rest Setting Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>