force-app/main/default/objects/MUSW__Auth_Provider__mdt/fields/MUSW__Secret__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>